--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,30 @@
 		font-weight: 800;
 		color: #5b6268;
 	}  
+	.container {
+		width: 100%;
+		overflow:hidden;
+		whitespace:nowrap;
+		max-width:100%;
+	}
+	.left {
+		white-space:nowrap;
+		overflow:hidden;
+		text-overflow:ellipsis;
+		-ms-text-overflow:ellipsis;
+		float: left;
+		position:absolute;
+		max-width:inherit;
+	}
+	.right {
+		white-space:nowrap;
+		overflow:hidden;
+		text-overflow:ellipsis;
+		-ms-text-overflow:ellipsis;
+		text-align: right;
+		width:auto;
+		float:right;
+	}	
   </style>
 </head>
 <body>
@@ -17,12 +41,26 @@
 
 		<header>
 			<h1>Pick & Pack</h1>
-			<nav class="navbar">
-				<ul class="nav navbar-nav tab-toggle">
-					<li><a data-toggle="tab" data-parent="#setup" href="#tabPick" class="active picklink">Pick</a></li>
-					<li><a data-toggle="tab" data-parent="#setup" href="#tabPack" class="packlink">Pack</a></li>
-				</ul>
-			</nav>
+			<div class="left">
+				<nav class="navbar">
+					<ul class="nav navbar-nav tab-toggle">
+						<li><a data-toggle="tab" data-parent="#setup" href="#tabPick" class="active picklink">Pick</a></li>
+						<li><a data-toggle="tab" data-parent="#setup" href="#tabPack" class="packlink">Pack</a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="container">
+				<div class="right">
+					<select class="daysfilter">
+						<option value="0">Today</option>
+						<option value="1">Yesterday</option>
+						<option value="7" selected="selected">7 days</option>
+						<option value="30">30 days</option>
+						<option value="90">90 days</option>
+					</select>
+					</br></br>
+				</div>
+			</div>
 		</header>
 
 		<div class="tab-content">
