--- a/app/index.html
+++ b/app/index.html
@@ -56,7 +56,7 @@
 						<option value="1">Yesterday</option>
 						<option value="7" selected="selected">7 days</option>
 						<option value="30">30 days</option>
-						<option value="90">90 days</option>
+						<option value="10000">B.C.</option>
 					</select>
 					</br></br>
 				</div>
