Revert "Updated some javascript urls"
This reverts commit 3ce06d2ce3aa45de9e3f8773ec494b49988e57b7.

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Pick & Pack</title>
-  <link rel="stylesheet" href="https://sdk.ttcdn.co/tt-uikit-0.11.0.min.css">
+  <link rel="stylesheet" href="https://sdk.ttcdn.co/tt-uikit-0.11.0.css">
   <script>
 	function printList(divID) {
 	   var divToPrint=document.getElementById(divID);
@@ -125,11 +125,11 @@
 	<div class="modal-notes"></div>
 
 	<!-- jQuery (this is required) -->
-	<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<!-- Tictail UIKit JavaScript -->
-	<script src="https://sdk.ttcdn.co/tt-uikit-0.11.0.min.js"></script>
+	<script src="https://sdk.ttcdn.co/tt-uikit-0.11.0.js"></script>
 	<!-- Tictail JavaScript SDK -->
-	<script src="https://sdk.ttcdn.co/tt.js"></script>
+	<script src="https://sdk.ttcdn.co/tt.0.12.0.js"></script>
 	<!-- Your Own JavaScript -->
 	<script src="app.js"></script>
 	  
